fix floating heading overflowing project window

--- a/css/tabs.bright.css
+++ b/css/tabs.bright.css
@@ -40,6 +40,10 @@
     background-color: #dcdcdc;
 }
 
+.project-div{
+    background-color: rgb(255, 255, 255);
+}
+
 .project-toolbar a{
     color: #666666;
 }
