--- a/css/tabs.css
+++ b/css/tabs.css
@@ -349,6 +349,8 @@ body{
     width: 100%;
     height: 100%;
     white-space: nowrap;
+    z-index: 1;
+    position: relative;
 }
 
 .project-list{
